fix(post_content): add margin for improved spacing

--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -38,6 +38,7 @@
 
 .post-content {
     color: var(--content);
+    margin: 30px 0;
 }
 
 .post-content h3,
